# coursework_03

./: README.md  pyproject.toml
src/: func.py  main.py  operations.json
tests/: test_func.py  test_operations.json
