[tool.poetry]
name = "coursework-03"
version = "0.1.0"
description = "Course work #3. Program get 5 last executed operations from json file sorted by date."
authors = ["Stas <stasfuryus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
